task: refactor multi-vendor logic
refactor and simplify cart/list comparison logic